--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="feedback">feedback</string>
     <string name="delete">Delete</string>
     <string name="done">done</string>
+    <string name="order">Order</string>
 </resources>
